--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ Title <- "Title of your paper goes here"
 
 # GitPresentation
 
-[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh///master?urlpath=rstudio)
+[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/KevinSee/GitPresentation/master?urlpath=rstudio)
 
 This repository contains the data and code for our paper:
 
@@ -35,14 +35,14 @@ Please cite this compendium as:
 
 ### How to download or install
 
-You can download the compendium as a zip from from this URL: </archive/master.zip>
+You can download the compendium as a zip from from this URL: <https://github.com/KevinSee/GitPresentation/archive/master.zip>
 
 Or you can install this compendium as an R package, GitPresentation, from GitHub with:
 
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
-remotes::install_github("/")
+remotes::install_github("KevinSee/GitPresentation")
 ```
 
 
